Set specific version as in production for django-celery and django-kombu

--- a/shared/requirements.txt
+++ b/shared/requirements.txt
@@ -48,8 +48,8 @@ https://bitbucket.org/jespern/django-piston/get/5b3ef294fe89.zip
 -e git+https://github.com/robhudson/django-debug-toolbar.git#egg=django-debug-toolbar
 
 #For scheduled tasks
-django-celery
-django-kombu
+django-celery==3.0.11
+django-kombu==0.9.4
 pytz
 #For gazetteer
 python-dateutil==1.5 #For Python < 3.0
