--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,8 @@ geonode/static/lib/js/angular.min.js
 geonode/static/lib/js/angular.min.js.map
 geonode/static/lib/js/ZeroClipboard.min.js
 geonode/static/lib/js/moment.min.js
+geonode/static/lib/css/bootstrap-treeview.css
+geonode/static/lib/js/bootstrap-treeview.js
 
 # Uploaded files
 geonode/uploaded
