--- a/geonode/static/bower.json
+++ b/geonode/static/bower.json
@@ -28,5 +28,6 @@
     "leaflet-fullscreen": "https://github.com/Leaflet/Leaflet.fullscreen.git",
     "eonasdan-bootstrap-datetimepicker": "~3.1.3",
     "bootstrap-treeview": "1.2.0",
+    "bower-tokenfield": "0.12.0"
   }
 }
