--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ geonode/static/lib/css/multi-select.css
 geonode/static/lib/css/qunit.css
 geonode/static/lib/css/select2.css
 geonode/static/lib/css/assets.min.css
+geonode/static/lib/css/bootstrap-tokenfield.css
 geonode/static/lib/js/assets.min.js
 geonode/static/lib/js/bootstrap-datepicker.js
 geonode/static/lib/js/bootstrap.js
