--- a/src/geonode-client/buildjs.cfg
+++ b/src/geonode-client/buildjs.cfg
@@ -238,13 +238,13 @@ license = license.txt
 
 first =
     LayerFeatureAgent.js
+    ogp/geostats.js
+    ogp/HeatmapLayer.js
     GeoExplorer.js
     Viewer.js
     SocialExplorer.js
     CapabilitiesRowExpander.js
     GeopsGetFeatureInfo.js
-
-
 
 exclude =
     app-debug.js
@@ -256,6 +256,10 @@ license = license.txt
 
 first =
     DataGrid.js
+    TimeSlider.js
+    ogp/solr.js
+    ogp/ogpConfig.js
+    ogp/HeatmapModel.js
     SearchTable.js
     MapSearchTable.js
     UserEmailSelector.js
