--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,8 @@ target
 /setuptools-0.6c11-py2.6.egg
 
 # supporting stuff pulled in by paver script
-/src/GeoNodePy/geonode/media/static/
+/geonode/media/
+/geonode/static/geonode
 /geoserver_token
 /development.db
 /django.log
