get a thumbnail from qgis server

--- a/geonode/local_settings.py.sample
+++ b/geonode/local_settings.py.sample
@@ -69,3 +69,13 @@ CATALOGUE = {
 
 # Default preview library
 #LAYER_PREVIEW_LIBRARY = 'geoext'
+
+tiles_directory = os.path.join(PROJECT_ROOT, "qgis_tiles")
+QGIS_SERVER_CONFIG = {
+    'tiles_directory': tiles_directory,
+    'tile_path': tiles_directory + '/%s/%d/%d/%d.png',
+    'legend_path': tiles_directory + '/%s/legend.png',
+    'thumbnail_path': tiles_directory + '/%s/thumbnail.png',
+    'qgis_server_url': 'http://127.0.0.1/qgisltr',
+    'layer_directory': os.path.join(PROJECT_ROOT, "qgis_layer")
+}
