- Implementation of migrate layers and metadata command

--- a/scripts/backup-restore/settings.ini
+++ b/scripts/backup-restore/settings.ini
@@ -11,3 +11,11 @@ apps   = people,account,avatar.avatar,base.license,base.topiccategory,base.regio
 
 dumps  = people,accounts,avatars,licenses,topiccategories,regions,resourcebases,contactroles,links,restrictioncodetypes,spatialrepresentationtypes,useropermissions,groupopermissions,uploadsessions,layers,attributes,maps,maplayers,documents,tags
 
+# Migrate from GN 2.0 to GN 2.4
+#migrations = base.resourcebase,layers.layer,layers.attribute,maps.map,maps.maplayer
+#manglers   = gn20_to_24.ResourceBaseMangler,gn20_to_24.LayerMangler,gn20_to_24.LayerAttributesMangler,gn20_to_24.MapMangler,gn20_to_24.MapLayersMangler
+
+# Migrate from GN 2.4 to GN 2.4
+migrations = base.resourcebase,layers.layer,layers.attribute,maps.map,maps.maplayer
+manglers   = gn24_to_24.ResourceBaseMangler,gn24_to_24.LayerMangler,gn24_to_24.LayerAttributesMangler,gn24_to_24.DefaultMangler,gn24_to_24.MapLayersMangler
+
