--- a/geonode/local_settings.py.sample
+++ b/geonode/local_settings.py.sample
@@ -1,4 +1,5 @@
 import os
+from kombu import Queue
 
 PROJECT_ROOT = os.path.abspath(os.path.dirname(__file__))
 
@@ -122,6 +123,66 @@ QGIS_SERVER_CONFIG = {
     'thumbnail_path': tiles_directory + '/%s/thumbnail.png',
     'map_tile_path': os.path.join(
         tiles_directory, '%s', 'map_tiles', '%s', '%s', '%s', '%s.png'),
-    'qgis_server_url': 'http://127.0.0.1/qgisltr',
+    'qgis_server_url': 'http://127.0.0.1:9995/cgi-bin/qgis_mapserv.fcgi',
     'layer_directory': os.path.join(PROJECT_ROOT, "qgis_layer")
+}
+
+
+# App specific
+# Geosafe - Celery
+BROKER_URL = 'redis://localhost:6379/0'
+CELERY_RESULT_BACKEND = BROKER_URL
+CELERY_ALWAYS_EAGER = False
+CELERY_EAGER_PROPAGATES_EXCEPTIONS = True
+CELERY_IGNORE_RESULT = False
+CELERY_SEND_EVENTS = True
+CELERY_TASK_RESULT_EXPIRES = 24 * 3600
+CELERY_DISABLE_RATE_LIMITS = True
+CELERY_DEFAULT_QUEUE = "default"
+CELERY_DEFAULT_EXCHANGE = "default"
+CELERY_DEFAULT_EXCHANGE_TYPE = "direct"
+CELERY_DEFAULT_ROUTING_KEY = "default"
+CELERY_CREATE_MISSING_QUEUES = True
+
+CELERY_QUEUES = [
+Queue('default', routing_key='default'),
+Queue('cleanup', routing_key='cleanup'),
+Queue('update', routing_key='update'),
+Queue('email', routing_key='email'),
+Queue('inasafe-headless', routing_key='inasafe-headless'),
+Queue('geosafe', routing_key='geosafe'),
+]
+
+import djcelery
+djcelery.setup_loader()
+
+# base url used to resolve layer files accessed by InaSAFE Headless
+GEONODE_BASE_URL = 'http://localhost:8000/'
+WMS_QGIS_SERVER = GEONODE_BASE_URL + 'qgis-server/'
+
+
+OGC_SERVER = {
+    'default': {
+        'BACKEND': 'geonode.geoserver',
+        'LOCATION': WMS_QGIS_SERVER,
+        # PUBLIC_LOCATION needs to be kept like this because in dev mode
+        # the proxy won't work and the integration tests will fail
+        # the entire block has to be overridden in the local_settings
+        'PUBLIC_LOCATION': WMS_QGIS_SERVER,
+        # 'LOCATION' : 'http://localhost:8080/geoserver/',  # or use WMS_QGIS_SERVER
+        # 'PUBLIC_LOCATION' : 'http://localhost:8080/geoserver/',  # or use WMS_QGIS_SERVER
+        'USER': 'admin',
+        'PASSWORD': 'geoserver',
+        'MAPFISH_PRINT_ENABLED': False,
+        'PRINT_NG_ENABLED': True,
+        'GEONODE_SECURITY_ENABLED': True,
+        'GEOGIG_ENABLED': False,
+        'WMST_ENABLED': False,
+        'BACKEND_WRITE_ENABLED': True,
+        'WPS_ENABLED': False,
+        'LOG_FILE': '%s/geoserver/data/logs/geoserver.log' % os.path.abspath(os.path.join(PROJECT_ROOT, os.pardir)),
+        # Set to name of database in DATABASES dictionary to enable
+        'DATASTORE': '',  # 'datastore',
+        'TIMEOUT': 10  # number of seconds to allow for HTTP requests
+    }
 }
